2008-09-08  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_xsettings.c (main): Use libimsettings-xsettings.so
	instead of using xsettings API directly.

	* imsettings/imsettings-xsettings.[ch]: new for xsettings support.

	* applet/imsettings-applet.schema: Add a key for xsettings support.

	* applet/main.c (_xsettings_terminated): new for xsettings support.
	(_xsettings_update): likewise.
	(_preference_xsettings_toggled): likewise.
	(_preference_activated): Add a preference for xsettings support.

2008-09-05  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_set_property): set
	a default value for icon.

	* imsettings-uninstalled.pc.in (Requires): Add missing deps.

2008-09-04  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_set_ic_focus): 
	ignore the event if it's brought up on reconnecting.
	(xim_proxy_protocol_real_xim_unset_ic_focus): likewise.

2008-09-02  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-request.c (imsettings_request_get_info_object):
	Use current locale if no locale is set.

	* utils/imsettings-info.c (main): set a locale to get the locale.

	* src/factory_info.c (imsettings_info_manager_real_get_info): 
	try to update the info for XIM if no info is in the hash.

	* imsettings/imsettings.h (IMSETTINGS_IMINFO_DAEMON_VERSION): 
	bump a version.

	* imsettings/imsettings-observer.c (imsettings_get_info_object): 
	interface has been changed.

	* imsettings/imsettings.xml (GetInfoObject): Add a langauge.

	* applet/main.c: ifdef'd a value.

	* utils/imsettings-info.c (main): set the language to query
	the info. (Issue#16)

	* applet/Makefile.am (INCLUDES): Fix a build stop due to the lack of
	the proper options.

2008-09-01  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.desktop.in.in (Icon): Get rid of
	the extension. (rhbz#460695)

2008-08-29  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (_activate): Fix a typo.
