@@ -1,3 +1,10 @@
+2008-09-09  Akira TAGOH  <tagoh@redhat.com>
+
+	* applet/main.c (_gconf_xsettings_cb): new
+	(_gconf_trigger_key_cb): new.
+	(_preference_grabbed): store the accel key into gconf.
+	(_create_applet): setup the accel key.
+
 2008-09-08  Akira TAGOH  <tagoh@redhat.com>
 
 	* src/factory_xsettings.c (main): Use libimsettings-xsettings.so
